[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "zip-to-tex"
version = "0.1.0"
description = "Flatten arXiv LaTeX source zips into a single compilable .tex file."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = []

[project.scripts]
zip-to-tex = "zip_to_tex.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
